--- a/programs/xml.tt
+++ b/programs/xml.tt
@@ -33,12 +33,12 @@ struct parser {
 
 struct writer {
 	# Provides function to write output.
-	write_string
+	write
 }
 
 struct xml_node {
 	# Common node properties and functions.
-	write_node
+	write
 }
 
 struct xml_pi( xml_node ) {
@@ -111,7 +111,7 @@ function new_parser( source ) {
 	var ( parser ) this = $new( parser );
 	let this.source = source;
 	let this.idx = -1;
-	let this.current = parser_next_char( this );
+	let this.current = this:next_char();
 	let this.line = 1;
 	return this;
 }
@@ -162,17 +162,17 @@ function parse_xml_qname( ( parser ) p ) {
 	if &&( <>( quote ascii.quote ) <>( quote ascii.squote ) ) {
 		throw $cat( "Expected quote character on line " p.line "."  );
 	}
-	call parser_next_char( p );
-	var str = parser_parse_string( p $asc( quote ) );
-	call parser_expect( p quote );
-	call parser_next_char( p );
+	call p:next_char();
+	var str = p:parse_string( $asc( quote ) );
+	call p:expect( quote );
+	call p:next_char();
 	return str;
 }
 
 # Skip over space and control-characters from the specified parser.
 function parser_skip_space( ( parser ) this ) {
 	while &&( >e( this.current 0 ) <e( this.current 32 ) ) {
-		call parser_next_char( this );
+		call this:next_char();
 	}
 	return this.current;
 }
@@ -186,11 +186,11 @@ function parser_expect( ( parser ) this, chr ) {
 
 # Member function for writing processing-instruction nodes.
 function write_xml_pi( ( xml_pi ) this, ( writer ) output ) {
-	call :output.write_string( "<?" );
-	call :output.write_string( this.target );
-	call :output.write_string( " " );
-	call :output.write_string( this.value );
-	call :output.write_string( "?>" );
+	call :output.write( "<?" );
+	call :output.write( this.target );
+	call :output.write( " " );
+	call :output.write( this.value );
+	call :output.write( "?>" );
 }
 
 # Return a new processing-instruction node.
@@ -198,54 +198,54 @@ function new_xml_pi( target, value ) {
 	var ( xml_pi ) p = $new( xml_pi );
 	let p.target = target;
 	let p.value = value;
-	let p.write_node = @write_xml_pi;
+	let p.write = @write_xml_pi;
 	return p;
 }
 
 # Parse a processing-instruction node from the specified parser positioned at the first question-mark.
 function parse_xml_pi( ( parser ) p ) {
-	call parser_expect( p ascii.question );
-	call parser_next_char( p );
-	var target = parser_parse_string( p "\11\12\15 " );
-	call parser_skip_space( p );
-	var value = parser_parse_string( p "?" );
-	call parser_expect( p ascii.question );
-	call parser_next_char( p );
+	call p:expect( ascii.question );
+	call p:next_char();
+	var target = p:parse_string( "\11\12\15 " );
+	call p:skip_space();
+	var value = p:parse_string( "?" );
+	call p:expect( ascii.question );
+	call p:next_char();
 	while <>( p.current ascii.gt ) {
-		let value = $cat( value "?" parser_parse_string( p "?" ) );
-		call parser_expect( p ascii.question );
-		call parser_next_char( p );
+		let value = $cat( value "?" p:parse_string( "?" ) );
+		call p:expect( ascii.question );
+		call p:next_char();
 	}
-	call parser_next_char( p );
+	call p:next_char();
 	return new_xml_pi( target value );
 }
 
 # Member function for writing element nodes and their children.
 function write_xml_element( ( xml_element ) this, ( writer ) output ) {
-	call :output.write_string( "<" );
-	call :output.write_string( this.name );
+	call :output.write( "<" );
+	call :output.write( this.name );
 	var idx;
 	var ( list ) atts = this.attributes;
 	while <( idx atts.len ) {
 		var ( tuple ) att = [ atts.array idx++ ];
-		call :output.write_string( " " );
-		call :output.write_string( att.key );
-		call :output.write_string( "=\"" );
-		call :output.write_string( att.value );
-		call :output.write_string( "\"" );
+		call :output.write( " " );
+		call :output.write( att.key );
+		call :output.write( "=\"" );
+		call :output.write( att.value );
+		call :output.write( "\"" );
 	}
 	var ( list ) children = this.children;
 	if &&( this.template <e( list.len( xml_element.children( this.template ) ) 0 ) <e( children.len 0 ) ) {
-		call :output.write_string( "/>" );
+		call :output.write( "/>" );
 	} else {
-		call :output.write_string( ">" );
+		call :output.write( ">" );
 		let idx = 0;
 		while <( idx children.len ) {
-			call :xml_node.write_node( [ children.array idx++ ], output );
+			call :xml_node.write( [ children.array idx++ ], output );
 		}
-		call :output.write_string( "</" );
-		call :output.write_string( this.name );
-		call :output.write_string( ">" );
+		call :output.write( "</" );
+		call :output.write( this.name );
+		call :output.write( ">" );
 	}
 }
 
@@ -273,7 +273,7 @@ function create_xml_element( ( xml_element ) this, name ) {
 function new_xml_element( name ) {
 	var ( xml_element ) elem = $new( xml_element );
 	let elem.name = name;
-	let elem.write_node = @write_xml_element;
+	let elem.write = @write_xml_element;
 	let elem.attributes = new_list( 4 );
 	let elem.children = new_list( 4 );
 	let elem.create_element = @create_xml_element;
@@ -284,7 +284,7 @@ function new_xml_element( name ) {
 function parse_xml_node( ( parser ) p, ( xml_element ) parent ) {
 	switch p.current {
 		case ascii.lt {
-			switch parser_next_char( p ) {
+			switch p:next_char() {
 				case ascii.exclam {
 					return parse_xml_decl( p );
 				}
@@ -300,220 +300,220 @@ function parse_xml_node( ( parser ) p, ( xml_element ) parent ) {
 			return parse_xml_entity( p );
 		}
 		default {
-			return new_xml_text( parser_parse_string( p, "&<" ) );
+			return new_xml_text( p:parse_string( "&<" ) );
 		}
 	}
-	var ( xml_element ) elem = :parent.create_element( parser_parse_string( p, "\11\12\15 />" ) );
-	call parser_skip_space( p );
+	var ( xml_element ) elem = :parent.create_element( p:parse_string( "\11\12\15 />" ) );
+	call p:skip_space();
 	while &&( <>( p.current ascii.slash ) <>( p.current ascii.gt ) ) {
-		var name = parser_parse_string( p, "\11\12\15 =" );
-		call parser_skip_space( p );
-		call parser_expect( p ascii.equals );
-		call parser_next_char( p );
-		call parser_skip_space( p );
+		var name = p:parse_string( "\11\12\15 =" );
+		call p:skip_space();
+		call p:expect( ascii.equals );
+		call p:next_char();
+		call p:skip_space();
 		call list_add( elem.attributes new_tuple( name parse_xml_qname( p ) ) );
-		call parser_skip_space( p );
+		call p:skip_space();
 	}
 	switch p.current {
 		case ascii.slash {
-			call parser_next_char( p );
+			call p:next_char();
 		}
 		case ascii.gt {
-			call parser_next_char( p );
+			call p:next_char();
 			var child = parse_xml_node( p, elem );
 			while child {
 				call list_add( elem.children child );
 				let child = parse_xml_node( p, elem );
 			}
-			call parser_expect( p ascii.slash );
-			call parser_next_char( p );
-			let name = parser_parse_string( p, "\11\12\15 >" );
+			call p:expect( ascii.slash );
+			call p:next_char();
+			let name = p:parse_string( "\11\12\15 >" );
 			if $cmp( elem.name name ) {
 				throw $cat( "Unexpected close tag '</" name ">' on line " p.line "." );
 			}
 		}
 	}
-	call parser_skip_space( p );
-	call parser_expect( p ascii.gt );
-	call parser_next_char( p );
+	call p:skip_space();
+	call p:expect( ascii.gt );
+	call p:next_char();
 	return elem;
 }
 
 # Member function for writing text-nodes.
 function write_xml_text( ( xml_text ) this, ( writer ) output ) {
-	call :output.write_string( this.text );
+	call :output.write( this.text );
 }
 
 # Return a new text-node with the specified value.
 function new_xml_text( text ) {
 	var ( xml_text ) this = $new( xml_text );
 	let this.text = text;
-	let this.write_node = @write_xml_text;
+	let this.write = @write_xml_text;
 	return this;
 }
 
 # Member function for writing text-nodes within cdata sections.
 function write_xml_cdata( ( xml_text ) this, ( writer ) output ) {
-	call :output.write_string( "<![CDATA[" );
-	call :output.write_string( this.text );
-	call :output.write_string( "]]>" );
+	call :output.write( "<![CDATA[" );
+	call :output.write( this.text );
+	call :output.write( "]]>" );
 }
 
 # Return a new text-node which writes content in a cdata section.
 function new_xml_cdata( cdata ) {
 	var ( xml_text ) this = $new( xml_text );
 	let this.text = cdata;
-	let this.write_node = @write_xml_cdata;
+	let this.write = @write_xml_cdata;
 	return this;
 }
 
 # Parse a cdata node from the specified parser positioned at "CDATA[".
 function parse_xml_cdata( ( parser ) p ) {
-	call parser_expect( p ascii.lbracket );
-	call parser_next_char( p );
-	if $cmp( "CDATA" parser_parse_string( p, "[" ) ) {
+	call p:expect( ascii.lbracket );
+	call p:next_char();
+	if $cmp( "CDATA" p:parse_string( "[" ) ) {
 		throw $cat( "Expected 'CDATA' on line " p.line "." );
 	}
-	call parser_next_char( p );
-	var str = parser_parse_string( p, "]" );
+	call p:next_char();
+	var str = p:parse_string( "]" );
 	while TRUE {
-		call parser_expect( p ascii.rbracket );
-		if =( parser_next_char( p ) ascii.rbracket ) {
-			call parser_next_char( p );
-			call parser_expect( p ascii.gt );
-			call parser_next_char( p );
+		call p:expect( ascii.rbracket );
+		if =( p:next_char() ascii.rbracket ) {
+			call p:next_char();
+			call p:expect( ascii.gt );
+			call p:next_char();
 			return new_xml_cdata( str );
 		} else {
-			let str = $cat( str "]" parser_parse_string( p "]" ) );
+			let str = $cat( str "]" p:parse_string( "]" ) );
 		}
 	}
 }
 
 # Member function for writing entity-references.
 function write_xml_entity( ( xml_entity ) this, ( writer ) output ) {
-	call :output.write_string( "&" );
-	call :output.write_string( this.name );
-	call :output.write_string( ";" );
+	call :output.write( "&" );
+	call :output.write( this.name );
+	call :output.write( ";" );
 }
 
 # Return a new entity-reference node with the specified value.
 function new_xml_entity( name ) {
 	var ( xml_entity ) this = $new( xml_entity );
 	let this.name = name;
-	let this.write_node = @write_xml_entity;
+	let this.write = @write_xml_entity;
 	return this;
 }
 
 # Parse an entity-reference node from the specified parser.
 function parse_xml_entity( ( parser ) p ) {
-	call parser_expect( p ascii.amp );
-	call parser_next_char( p );
-	var ent = new_xml_entity( parser_parse_string( p ";" ) );
-	call parser_expect( p ascii.semicolon );
-	call parser_next_char( p );
+	call p:expect( ascii.amp );
+	call p:next_char();
+	var ent = new_xml_entity( p:parse_string( ";" ) );
+	call p:expect( ascii.semicolon );
+	call p:next_char();
 	return ent;
 }
 
 # Member function for writing comment-nodes.
 function write_xml_comment( ( xml_comment ) this, ( writer ) output ) {
-	call :output.write_string( "<!--" );
-	call :output.write_string( this.comment );
-	call :output.write_string( "-->" );
+	call :output.write( "<!--" );
+	call :output.write( this.comment );
+	call :output.write( "-->" );
 }
 
 # Return a new comment-node with the specified value.
 function new_xml_comment( comment ) {
 	var ( xml_comment ) this = $new( xml_comment );
 	let this.comment = comment;
-	let this.write_node = @write_xml_comment;
+	let this.write = @write_xml_comment;
 	return this;
 }
 
 # Parse a comment-node from the specified parser positioned at the first hyphen.
 function parse_xml_comment( ( parser ) p ) {
-	call parser_expect( p ascii.minus );
-	call parser_next_char( p );
-	call parser_expect( p ascii.minus );
-	call parser_next_char( p );
-	var str = parser_parse_string( p, "-" );
+	call p:expect( ascii.minus );
+	call p:next_char();
+	call p:expect( ascii.minus );
+	call p:next_char();
+	var str = p:parse_string( "-" );
 	while TRUE {
-		call parser_expect( p ascii.minus );
-		if =( parser_next_char( p ) ascii.minus ) {
-			call parser_next_char( p );
-			call parser_skip_space( p );
-			call parser_expect( p ascii.gt );
-			call parser_next_char( p );
+		call p:expect( ascii.minus );
+		if =( p:next_char() ascii.minus ) {
+			call p:next_char();
+			call p:skip_space();
+			call p:expect( ascii.gt );
+			call p:next_char();
 			return new_xml_comment( str );
 		} else {
-			let str = $cat( str "-" parser_parse_string( p "-" ) );
+			let str = $cat( str "-" p:parse_string( "-" ) );
 		}
 	}
 }
 
 # Member function for writing doctype-nodes.
 function write_xml_doctype( ( xml_element ) this, ( writer ) output ) {
-	call :output.write_string( "<!" );
-	call :output.write_string( this.name );
-	call :output.write_string( " " );
+	call :output.write( "<!" );
+	call :output.write( this.name );
+	call :output.write( " " );
 	var idx;
 	var ( list ) atts = this.attributes;
 	while <( idx atts.len ) {
 		var ( tuple ) att = [ atts.array idx++ ];
 		switch idx {
 			case 1 {
-				call :output.write_string( att.value );
+				call :output.write( att.value );
 				continue;
 			}
 			case 2 {
-				call :output.write_string( " " );
-				call :output.write_string( att.key );
+				call :output.write( " " );
+				call :output.write( att.key );
 			}
 		}
-		call :output.write_string( " \"" );
-		call :output.write_string( att.value );
-		call :output.write_string( "\"" );
+		call :output.write( " \"" );
+		call :output.write( att.value );
+		call :output.write( "\"" );
 	}
-	call :output.write_string( ">" );
+	call :output.write( ">" );
 }
 
 # Parse a doctype-declaration element from the specified parser positioned at 'DOCTYPE'.
 function parse_xml_doctype( ( parser ) p ) {
-	if $cmp( "DOCTYPE" parser_parse_string( p "\11\12\15 " ) ) {
+	if $cmp( "DOCTYPE" p:parse_string( "\11\12\15 " ) ) {
 		throw $cat( "Expected 'DOCTYPE' on line " p.line "." );
 	}
-	call parser_skip_space( p );
+	call p:skip_space();
 	var ( xml_element ) elem = new_xml_element( "DOCTYPE" );
-	let elem.write_node = @write_xml_doctype;
-	call list_add( elem.attributes new_tuple( "name" parser_parse_string( p "\11\12\15 " ) ) );
-	call parser_skip_space( p );
-	switch parser_parse_string( p "\11\12\15 [>" ) {
+	let elem.write = @write_xml_doctype;
+	call list_add( elem.attributes new_tuple( "name" p:parse_string( "\11\12\15 " ) ) );
+	call p:skip_space();
+	switch p:parse_string( "\11\12\15 [>" ) {
 		case "PUBLIC" {
-			call parser_skip_space( p );
+			call p:skip_space();
 			call list_add( elem.attributes new_tuple( "PUBLIC" parse_xml_qname( p ) ) );
-			call parser_skip_space( p );
+			call p:skip_space();
 			call list_add( elem.attributes new_tuple( "SYSTEM" parse_xml_qname( p ) ) );
 		}
 		case "SYSTEM" {
-			call parser_skip_space( p );
+			call p:skip_space();
 			call list_add( elem.attributes new_tuple( "SYSTEM" parse_xml_qname( p ) ) );
 		}
 	}
-	call parser_skip_space( p );
+	call p:skip_space();
 	if =( p.current ascii.lbracket ) {
-		call parser_parse_string( p "]" );
-		call parser_expect( p ascii.rbracket );
-		call parser_next_char( p );
-		call parser_skip_space( p );
+		call p:parse_string( "]" );
+		call p:expect( ascii.rbracket );
+		call p:next_char();
+		call p:skip_space();
 	}
-	call parser_expect( p ascii.gt );
-	call parser_next_char( p );
+	call p:expect( ascii.gt );
+	call p:next_char();
 	return elem;
 }
 
 # Parse a declaration-node from the specified parser positioned at the exclamation-mark.
 function parse_xml_decl( ( parser ) p ) {
-	call parser_expect( p ascii.exclam );
-	switch parser_next_char( p ) {
+	call p:expect( ascii.exclam );
+	switch p:next_char() {
 		case ascii.minus {
 			return parse_xml_comment( p );
 		}
@@ -561,21 +561,25 @@ function indent_xml_node_list( ( list ) nodes, linefeed ) {
 # Return a simple writer that writes to standard-output.
 function new_writer() {
 	var ( writer ) w = $new( writer );
-	let w.write_string = $function( ${ ( this, str ) { write str; } } );
+	let w.write = $function( ${ ( this, str ) { write str; } } );
 	return w;
 }
 
 program xml {
-	# Document template used to specify permitted element names.
-	var template = "<elem><child><x>cdata</x><y/></child></elem>";
-	# Parse document against template.
-	var ( list ) nodes = parse_xml_node_list( new_parser( "<?xml version=\"?\"?><!---test--><!DOCTYPE elem PUBLIC \"a\" 'b'[]><elem>text<child x=\"y\"><![CDATA[]txt]]><x/><x>x</x><y/></child>&ent;</elem>\12" ), template );
-	#var ( list ) nodes = parse_xml_node_list( new_parser( $load( $argv( 1 ) ) ) 0 );
+	var ( list ) nodes;
+	if <( $argc 2 ) {
+		# Document template used to specify permitted element names.
+		var template = "<elem><child><x>cdata</x><y/></child></elem>";
+		# Parse document against template.
+		let nodes = parse_xml_node_list( new_parser( "<?xml version=\"?\"?><!---test--><!DOCTYPE elem PUBLIC \"a\" 'b'[]><elem>text<child x=\"y\"><![CDATA[]txt]]><x/><x>x</x><y/></child>&ent;</elem>\12" ), template );
+	} else {
+		let nodes = parse_xml_node_list( new_parser( $load( $argv( 1 ) ) ) 0 );
+	}
 	# Format and output.
 	call indent_xml_node_list( nodes "\12" );
 	var ( writer ) out = new_writer();
 	var idx;
 	while <( idx nodes.len ) {
-		call :xml_node.write_node( [ nodes.array idx++ ] out );
+		call :xml_node.write( [ nodes.array idx++ ] out );
 	}
 }
