--- a/programs/test.tt
+++ b/programs/test.tt
@@ -533,13 +533,14 @@ function testread() {
 }
 
 function testload() {
-	var src = $load( $src );
-	call assert_equals( $sub( src, 100, -( $len( src ) 100 ) ), $load( $src, 100 ), ${-} );
-	call assert_equals( $sub( src, 100, 100 ), $load( $src, 100, 100 ), ${-} );
-	call assert_equals( "", $load( $src, 0, 0 ), ${-} );
-	call assert_equals( "", $load( $src, -1, 0 ), ${-} );
-	call assert_equals( "", $load( $src, $len( src ), 1 ), ${-} );
-	call assert_equals( src, $load( $src, 0, +( $len( src ) 1 ) ), ${-} );
+	var path = $src( @test );
+	var src = $load( path );
+	call assert_equals( $sub( src, 100, -( $len( src ) 100 ) ), $load( path, 100 ), ${-} );
+	call assert_equals( $sub( src, 100, 100 ), $load( path, 100, 100 ), ${-} );
+	call assert_equals( "", $load( path, 0, 0 ), ${-} );
+	call assert_equals( "", $load( path, -1, 0 ), ${-} );
+	call assert_equals( "", $load( path, $len( src ), 1 ), ${-} );
+	call assert_equals( src, $load( path, 0, +( $len( src ) 1 ) ), ${-} );
 	call assert_throws( "1", ${ () { call $load( except( ${ 1 } ) ); } } );
 	call assert_throws( "2", ${ () { call $load( "", except( ${ 2 } ) ); } } );
 	call assert_throws( "3", ${ () { call $load( "", 0, except( ${ 3 } ) ); } } );
@@ -555,7 +556,7 @@ function testsave() {
 }
 
 function testflen() {
-	call assert_equals( $flen( $src ), $len( $load( $src ) ), ${-} );
+	call assert_equals( $flen( $src( @test ) ), $len( $load( $src( @test ) ) ), ${-} );
 	call assert_throws( "1", ${ () { call $flen( except( ${ 1 } ) ); } } );
 	call assert_throws( "Not a string", ${ () { call $flen( 0 ); } } );
 }
@@ -565,7 +566,7 @@ function testargc() {
 }
 
 function testargv() {
-	call assert_equals( $src, $argv( 0 ), ${-} );
+	call assert_equals( $src( @test ), $argv( 0 ), ${-} );
 	call assert_throws( "1", ${ () { call $argv( except( ${ 1 } ) ); } } );
 	call assert_throws( "Command-line argument index", ${ () { call $argv( -1 ); } } );
 }
@@ -719,7 +720,8 @@ function testeq() {
 }
 
 function testsrc() {
-	call assert_equals( "test.tt", $sub( $src, -( $len( $src ) 7 ), 7 ), ${-} );
+	call assert_equals( "test.tt", $sub( $src( @test ), -( $len( $src( @test ) ) 7 ), 7 ), ${-} );
+	call assert_throws( "Not a function", ${ () { call $src( 0 ); } } );
 }
 
 function teststridx() {
