--- a/programs/test.tt
+++ b/programs/test.tt
@@ -118,9 +118,9 @@ function testarray() {
 	set [ a idx++ ] = 2;
 	call assert_equals( 2, [ a 1 ], ${-} );
 	call assert_equals( 2, idx, ${-} );
-	let a = $array( ${ 0, $str( "\"one", "\"" ), $tup( "\\two\\"2 ), "\063", ${ four(4) }, 84, 84 } );
+	let a = $array( ${ 0, $str( "\"one", "\"" ), $tup( "\\two\\"2 ), "\063", ${ four(4) }, 84, 84, $tup($array(${1}) 1) } );
 	let a = $array( $parse( $unparse( $values( a ) ) ) );
-	call assert_equals( 7, $len( a ), ${-} );
+	call assert_equals( 8, $len( a ), ${-} );
 	call assert_equals( 0, [ a 0 ], ${-} );
 	call assert_equals( "\"one\"", [ a 1 ], ${-} );
 	call assert_equals( "\\two\\", $str( [ a 2 ] ), ${-} );
@@ -130,6 +130,7 @@ function testarray() {
 	call assert_equals( "4", $child( $next( [ a 4 ] ) ), ${-} );
 	call assert_equals( "TT", $sub( a, 5, 2 ), ${-} );
 	call assert_equals( "[Array]", a, ${-} );
+	call assert_equals( $tup("[Array]"1), [ a 7 ], ${-} );
 	call assert_equals( 1, $len( $array( 1 ) ), ${-} );
 	let b = $array( 2 );
 	let c = $array( ${ "a" 1 } );
@@ -152,10 +153,14 @@ function testarray() {
 	call assert_throws( "Expected '(' after '$str'", ${ () { call $array( ${ $str } ); } } );
 	call assert_throws( "Invalid string literal", ${ () { call $array( ${ $str() } ); } } );
 	call assert_throws( "Invalid string literal", ${ () { call $array( ${ $str( "" a ) } ); } } );
-	call assert_throws( "Expected '(' after '$tup'", ${ () { call $array( ${ $tup } ); } } );
-	call assert_throws( "Invalid tuple string", ${ () { call $array( ${ $tup() } ); } } );
+	call assert_throws( "Invalid tuple constant", ${ () { call $array( ${ $tup } ); } } );
+	call assert_throws( "Invalid tuple constant", ${ () { call $array( ${ $tup() } ); } } );
 	call assert_throws( "Invalid tuple constant", ${ () { call $array( ${ $tup( "", ) } ); } } );
 	call assert_throws( "Invalid tuple integer", ${ () { call $array( ${ $tup( "", a ) } ); } } );
+	call assert_throws( "Expected '(' after '$array'", ${ () { call $array( ${ $array } ); } } );
+	call assert_throws( "Expected '(' after '$buffer'", ${ () { call $array( ${ $buffer } ); } } );
+	call assert_throws( "Expected '$' after '$array('", ${ () { call $array( ${ $array() } ); } } );
+	call assert_throws( "Expected '{' after '$array($'", ${ () { call $array( ${ $array($) } ); } } );
 	call assert_throws( "Invalid integer constant", ${ () { call $array( ${ a } ); } } );
 	call assert_throws( "Local variable 'x' already", ${ ( x ) { var [ x 0 ]; } } );
 	call assert_throws( "Local variable 'x' already", ${ ( x ) { var x = $array( 0 ); } } );
