--- a/programs/test.tt
+++ b/programs/test.tt
@@ -118,6 +118,7 @@ function testarray() {
 	set [ a idx++ ] = 2;
 	call assert_equals( 2, [ a 1 ], ${-} );
 	call assert_equals( 2, idx, ${-} );
+	call assert_equals( "a", [ $array( 2 0 "a" ) 1 ], ${-} );
 	let a = $array( ${ 0, $str( "\"one", "\"" ), $tup( "\\two\\"2 ), "\063", ${ four(4) }, 84, 84, $tup($array(${1}) 1) } );
 	let a = $array( $parse( $unparse( $values( a ) ) ) );
 	call assert_equals( 8, $len( a ), ${-} );
@@ -140,11 +141,13 @@ function testarray() {
 	set [ b 1 ] = c;
 	set [ c 0 ] = c;
 	set [ c 1 ] = b;
-	call assert_throws( "Invalid array length.", ${ () { call $array( -1 ); } });
+	call assert_throws( "Invalid array length.", ${ () { call $array( -1 ); } } );
+	call assert_throws( "Unexpected expression.", ${ () { call $array( ${0} 0 ); } } );
 	call assert_throws( "Array index", ${ () { set [ $array( 0 ) -1 ] = except( ${ 0 } ); } } );
 	call assert_throws( "Array index", ${ () { set [ $array( 0 ) 0 ] = except( ${ 0 } ); } } );
 	call assert_throws( "Array index", ${ () { call [ $array( 0 ) -1 ]; } } );
 	call assert_throws( "Array index", ${ () { call [ $array( 0 ) 0 ]; } } );
+	call assert_throws( "Array index", ${ () { call $array( 0 0 ); } } );
 	call assert_throws( "Not an array", ${ () { call [ 0 0 ]; } } );
 	call assert_throws( "Not an array", ${ () { set [ 0 0 ] = 0; } } );
 	call assert_throws( "Invalid index expression", ${ () { call []; } } );
