--- a/programs/lze.tt
+++ b/programs/lze.tt
@@ -11,7 +11,7 @@ function lze_hash( input, idx ) {
 # Return the encoded length and encode to output if not null.
 function lze_encode( input, output ) {
 	var hash, in_idx, out_idx, lit, off, len, max;
-	let hash = $array( 65536 );
+	let hash = $buffer( 65536 );
 	while <e( in_idx $len( input ) ) {
 		let len = 1;
 		if >( -( $len( input ) in_idx ) 2 ) {
@@ -108,11 +108,11 @@ program lze {
 		let org = $load( $argv( 1 ) );
 		print $cat( "Original length: " $len( org ) );
 		
-		let buf = $array( lze_encode( org 0 ) );
+		let buf = $buffer( lze_encode( org 0 ) );
 		print $cat( "Compressed length: " lze_encode( org buf ) );
 		let enc = $sub( buf 0 $len( buf ) );
 		
-		let buf = $array( lze_decode( enc 0 ) );
+		let buf = $buffer( lze_decode( enc 0 ) );
 		print $cat( "Decompressed length: " lze_decode( enc buf ) );
 		let out = $sub( buf 0 $len( buf ) );
 
