--- a/programs/tmf2wav.tt
+++ b/programs/tmf2wav.tt
@@ -28,8 +28,8 @@ struct channel {
 }
 
 struct replay {
-	song_name, sequence, samples, channels, ramp_buf,
-	seq_idx, tempo, gain, transpose, wait, reset, downsample
+	song_name, sequence, samples, channels, ramp_buf, reverb_buf, reverb_idx,
+	seq_idx, tempo, gain, transpose, wait, reset, downsample, reverb
 }
 
 function trim( str ) {
@@ -64,6 +64,23 @@ function downsample( buf, count ) {
 		let [ buf out_idx++ ] = +( >>( [ buf idx ] 2 ) >>( [ buf +( idx 2 ) ] 1 ) >>( [ buf +( idx 4 ) ] 2 ) );
 		let idx = +( idx 3 );
 	}
+}
+
+function replay_reverb( ( replay ) this, buf, count ) {
+	var idx, end = <<( count 1 );
+	var rev_buf = this.reverb_buf, rev_len = >>( $len( rev_buf ) 1 ), rev_idx = this.reverb_idx;
+	while <( idx end ) {
+		let [ buf idx ] = >>( +( *( [ buf idx ] 3 ) [ rev_buf +( rev_idx 1 ) ] ) 2 );
+		let [ buf +( idx 1 ) ] = >>( +( *( [ buf +( idx 1 ) ] 3 ) [ rev_buf rev_idx ] ) 2 );
+		let [ rev_buf rev_idx ] = [ buf idx ];
+		let [ rev_buf +( rev_idx 1 ) ] = [ buf +( idx 1 ) ];
+		let rev_idx = +( rev_idx 2 );
+		if >e( rev_idx rev_len ) {
+			let rev_idx = 0;
+		}
+		let idx = +( idx 2 );
+	}
+	let this.reverb_idx = rev_idx;
 }
 
 function channel_mix( ( channel ) this, output, count ) {
@@ -214,6 +231,9 @@ function replay_tick( ( replay ) this, mix_buf ) {
 			}
 			call :( this.downsample, mix_buf, +( tick_len 32 ) );
 			call volume_ramp( mix_buf, this.ramp_buf, tick_len );
+			if this.reverb {
+				call :this.reverb( mix_buf, tick_len );
+			}
 		}
 	}
 	return tick_len;
@@ -267,6 +287,10 @@ function replay_reset( ( replay ) this ) {
 	let this.transpose = 0;
 	let this.wait = 0;
 	let this.ramp_buf = $buffer( 64 );
+	if this.reverb {
+		let this.reverb_buf = $buffer( *( /( SAMPLE_RATE 20 ) 2 ) );
+		let this.reverb_idx = 0;
+	}
 	while <( idx $len( this.channels ) ) {
 		var ( channel ) chn = $new( channel );
 		let chn.mix = @channel_mix;
@@ -274,7 +298,7 @@ function replay_reset( ( replay ) this ) {
 	}
 }
 
-function new_replay( tmf ) {
+function new_replay( tmf, reverb ) {
 	var idx, ( replay ) this = $new( replay );
 	if $cmp( $sub( tmf, 0, 4 ) "TMF0" ) {
 		throw "Not a TMF file.";
@@ -299,6 +323,9 @@ function new_replay( tmf ) {
 	}
 	let this.reset = @replay_reset;
 	let this.downsample = @downsample;
+	if reverb {
+		let this.reverb = @replay_reverb;
+	}
 	call this:reset();
 	return this;
 }
@@ -326,17 +353,34 @@ function wav_header( sample_rate, num_samples, output ) {
 }
 
 program tmf2wav {
-	if <( $argc 2 ) {
-		error $str( "Usage: " $argv( 0 ) " input.tmf [output.wav]" );
-	} else {
-		var ( replay ) repl = new_replay( $load( $argv( 1 ) ) );
+	var input, output, reverb, idx = 1;
+	while <( idx $argc ) {
+		var arg = $argv( idx++ );
+		if $eq( arg "-reverb" ) {
+			let reverb = 1;
+		} else {
+			if input {
+				if output {
+					let input = 0;
+				} else {
+					let output = arg;
+				}
+			} else {
+				let input = arg;
+			}
+		}
+	}
+	if input {
+		var ( replay ) repl = new_replay( $load( input ), reverb );
 		print $str( "Song Name: " repl.song_name );
 		var samples = repl:convert( 0 0 );
 		print $str( "Output file length: " *( samples 4 ) " bytes." );
-		if >( $argc 2 ) {
+		if output {
 			var wav = $buffer( +( wav_header( SAMPLE_RATE, samples, 0 ) samples ) );
 			call repl:convert( wav, wav_header( SAMPLE_RATE, samples, wav ) );
-			save $pack( wav ) $argv( 2 );
+			save $pack( wav ) output;
 		}
+	} else {
+		error $str( "Usage: " $argv( 0 ) " input.tmf [output.wav] [-reverb]" );
 	}
 }
